@@ -11,6 +11,8 @@ changes since wmaker 0.62.1:
 - added WMCreateTabViewItem()
 - added W_CreateUnmanagedTopView()
 - added wtokenize()
+- added WMWidgetIsMapped()
+- added WMSetApplicationIconWindow()
 - restructured the directory tree. Added Documentation, Examples and Tests
   subdirectories
 - removed WMArrayBag and reorganized WMTreeBag to be WMBag.
